--- a/Pages/css/formulir.css
+++ b/Pages/css/formulir.css
@@ -5,7 +5,6 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
-    transition: all 0.8s ease;
 }
 
 :root{
@@ -28,6 +27,9 @@ body{
     min-height: 100vh;
     background-color: var(--body-color);
     transition: var(--tran-05);
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 ::selection{
@@ -308,21 +310,7 @@ body.dark .switch::before{
     padding: 10px 30px;
 }
 
-.home .date{
-    display: inline-block;
-    padding: 10px 30px;
-    border-radius: 50px;
-    background-color: var(--sidebar-color);
-    margin-left: 2rem;
-    margin-top: 1rem;
-    padding: 0.5rem 1.5rem;
-}
 
-.home .date input[type="date"]{
-    border: var(--sidebar-color);
-    background: transparent;
-    color: #0F123F;
-}
 
 
 
@@ -336,178 +324,162 @@ body.dark .home .text{
     color: var(--text-color);
 }
 
-.home .grid{
-    display: grid;
-    margin-top: 30px;
-    padding: 10px 30px;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 0.8em;
-}
-
-.home .grid .middle1{
-    grid-column-start: 1;
-    grid-column-end: 3;
-    grid-row-start: 1;
-    grid-row-end: 3;
-}
-
-.home .grid .middle2{
-    grid-column-start: 3;
-    grid-column-end: 5;
-    grid-row-start: 1;
-    grid-row-end: 3;
-}
-
-.home .grid .middle3{
-    grid-column-start:2;
-    grid-column-end: 4;
-    grid-row-start: 3;
-    grid-row-end: 5;
-}
-
-.home .grid > div {
-    background-color: white;
-    border-radius: 20px;
-    height: 150px;
-    box-shadow: none;
-    transition: all 200ms ease;
-}
-
-
-.home .grid > div:hover{
-    box-shadow: 5px 5px #D2D2FF;
-}
-
-.home .grid > div i{
-    padding-left: 0.4em;
-    padding-top: 0.4em;
-   font-size: 2.5em;
-}
-
-
-
-h3{
-    padding-left: 1em;
-    padding-top: 0.3em;
-    font-size: 16px;
-    
-}
-
-
-h4{
-    padding-left: 1em;
-    font-weight: 400;
-    font-size: 12px;
-    margin-left: 0.2em;
-}
-
-h2{
-    float: right;
-    padding-right: 0.6em;
-    font-size: 28px;
-   
-}
-
-
-.container {
+.container{
+    height: 500px;
+    max-width: 1000px;
     width: 100%;
-    height: 50vh;
+    border-radius: 20px;
     padding: 30px;
-    display: flex;
-    justify-content: left;
-    align-items: center;
-  }
-  
-  .calendar {
-    width: 27rem;
-    height: 18rem;
-    border-radius: 20px;
-    background-color: var(--sidebar-color);
-    
-  }
-  
-  .month {
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
-    width: 100%;
-    height: 4rem;
+    margin: 25px 25px;
+    background-color: #fff;
+    box-shadow: 0 5px 10px rgba(0,0,0,0.1);
+
+}
+.container header{
+    position: relative;
+    font-size: 20px;
+    font-weight: 600;
+    color: #333;
+}
+.container header::before{
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -2px;
+    height: 3px;
+    width: 27px;
+    border-radius: 8px;
     background-color: var(--primary-color);
+}
+.container form{
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    margin-top: 30px;
+    min-height: 500px;
+    background-color: transparent;
+    overflow: hidden;
+}
+.container form .form{
+    position: absolute;
+    background-color: #fff;
+    transition: 0.3s ease;
+}
+.container form .form.second{
+    opacity: 0;
+    pointer-events: none;
+    transform: translateX(100%);
+}
+form.secActive .form.second{
+    opacity: 1;
+    pointer-events: auto;
+    transform: translateX(0);
+}
+form.secActive .form.first{
+    opacity: 0;
+    pointer-events: none;
+    transform: translateX(-100%);
+}
+.container form .title{
+    display: block;
+    margin-bottom: 8px;
+    font-size: 16px;
+    font-weight: 500;
+    margin: 6px 0;
+    color: #333;
+}
+.container form .fields{
     display: flex;
+    align-items: center;
     justify-content: space-between;
-    align-items: center;
-    padding: 0 2rem;
-    text-align: center;
-    text-shadow: 0 0.1rem 0.1rem rgba(0, 0, 0, 0.5);
-  }
-  
-  .month i {
-    font-size: 1.5rem;
-    cursor: pointer;
-    color: #fff;
-  }
-  
-  .month h1 {
-    font-size: 2rem;
-    font-weight: 400;
-    text-transform: uppercase;
-    letter-spacing: 0.2rem;
-    margin-bottom: 1rem;
-  }
-  
-  .month p {
-    font-size: 1.6rem;
-  }
-  
-  .weekdays {
-    width: 100%;
-    height: 5rem;
-    padding: 0 0.4rem;
+    flex-wrap: wrap;
+}
+form .fields .input-field{
     display: flex;
-    align-items: center;
-  }
-  
-  .weekdays div {
+    width: calc(100% / 3 - 15px);
+    flex-direction: column;
+    margin: 4px 0;
+}
+.input-field label{
+    font-size: 12px;
+    font-weight: 500;
+    color: #2e2e2e;
+}
+.input-field input, select{
+    outline: none;
     font-size: 14px;
     font-weight: 400;
-    letter-spacing: 0.1rem;
-    width: calc(44.2rem / 7);
+    color: #333;
+    border-radius: 5px;
+    border: 1px solid #aaa;
+    padding: 0 15px;
+    height: 42px;
+    margin: 8px 0;
+}
+.input-field input :focus,
+.input-field select:focus{
+    box-shadow: 0 3px 6px rgba(0,0,0,0.13);
+}
+.input-field select,
+.input-field input[type="date"]{
+    color: #707070;
+}
+.input-field input[type="date"]:valid{
+    color: #333;
+}
+.container form button, .backBtn{
     display: flex;
-    justify-content: center;
     align-items: center;
-    
-  }
-  
-  .days {
+    justify-content: center;
+    height: 45px;
+    max-width: 200px;
     width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    padding: 0.2rem;
-  }
-  
-  .days div {
-    font-size: 1rem;
-    margin: 0.3rem;
-    width: calc(40.2rem / 7);
-    height: 5rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-shadow: 0 0.3rem 0.5rem rgba(0, 0, 0, 0.5);
-    transition: background-color 0.2s;
-  }
-  
-  .days div:hover:not(.today) {
-    background-color: #262626;
-    border: 0.2rem solid #777;
-    cursor: pointer;
-  }
-  
-  .prev-date,
-  .next-date {
-    opacity: 0.5;
-  }
-  
-  .today {
+    border: none;
+    outline: none;
+    color: #fff;
+    border-radius: 10px;
+    margin: 25px 0;
     background-color: var(--primary-color);
-  }
+    transition: all 0.3s linear;
+    cursor: pointer;
+}
+.container form .btnText{
+    font-size: 14px;
+    font-weight: 400;
+}
+.backBtn:hover{
+    color: var(--primary-color);
+    background-color: #D2D2FF;
+}
+form button:hover{
+    color: var(--primary-color);
+    background-color: #D2D2FF;
+}
+form button i,
+form .backBtn i{
+    margin: 0 6px;
+}
+form .backBtn i{
+    transform: rotate(180deg);
+}
+form .buttons{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+form .buttons button , .backBtn{
+    margin-right: 14px;
+}
+
+@media (max-width: 750px) {
+    .container form{
+        overflow-y: scroll;
+    }
+    .container form::-webkit-scrollbar{
+       display: none;
+    }
+    form .fields .input-field{
+        width: calc(100% / 2 - 15px);
+    }
+}
 
