--- a/Pages/css/penempatan.css
+++ b/Pages/css/penempatan.css
@@ -334,55 +334,82 @@ body.dark .switch::before{
 body.dark .home .text{
     color: var(--text-color);
 }
-
-.home .grid{
-    display: grid;
-    margin-top: 30px;
+.home .table{
     padding: 10px 30px;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 0.8em;
+}
+.home .content-table{
+    border-collapse: collapse;
+    margin: 25px 0;
+    padding: 10px 30px;
+    border-radius: 10px;
+    overflow: hidden;
+    
 }
 
-.home .grid .middle1{
-    grid-column-start: 1;
-    grid-column-end: 3;
-    grid-row-start: 1;
-    grid-row-end: 3;
+.home .content-table thead tr{
+    background-color: var(--primary-color);
+    color: #fff;
+    text-align: left;
+    font-size: 16px;
+    font-weight: 400;
+
 }
 
-.home .grid .middle2{
-    grid-column-start: 3;
-    grid-column-end: 5;
-    grid-row-start: 1;
-    grid-row-end: 3;
+.home .content-table th,
+.home .content-table td{
+    padding: 12px 15px;
+}
+.home .content-table tbody tr{
+    border-bottom: 1px solid #dddddd;
 }
 
-.home .grid .middle3{
-    grid-column-start:2;
-    grid-column-end: 4;
-    grid-row-start: 3;
-    grid-row-end: 5;
+.home .content-table tbody tr:nth-of-type(even){
+    background-color: #fff;
 }
 
-.home .grid > div {
-    background-color: white;
-    border-radius: 20px;
-    height: 150px;
-    box-shadow: none;
-    transition: all 200ms ease;
+.home .content-table tbody tr:last-of-type{
+    border-bottom: 2px solid var(--primary-color);
 }
 
 
-.home .grid > div:hover{
-    box-shadow: 5px 5px #D2D2FF;
+.container form button, .backBtn{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 45px;
+    max-width: 200px;
+    width: 100%;
+    border: none;
+    outline: none;
+    color: #fff;
+    border-radius: 10px;
+    margin: 10px 0px;
+    background-color: var(--primary-color);
+    transition: all 0.3s linear;
+    cursor: pointer;
 }
-
-.home .grid > div i{
-    padding-left: 0.4em;
-    padding-top: 0.4em;
-   font-size: 2.5em;
+.container form .btnText{
+    font-size: 14px;
+    font-weight: 400;
 }
-
+.backBtn:hover{
+    color: var(--primary-color);
+    background-color: #D2D2FF;
+}
+form button:hover{
+    color: var(--primary-color);
+    background-color: #D2D2FF;
+}
+.container form button, .backBtn i{
+    font-size: 18px;
+    margin: 0px 10px 0px -10px;
+}
+.home .buttons .grid{
+    display: grid;
+    justify-items: flex-end;
+    grid-template-columns: repeat(5, 1fr);
+    gap: 0.1em;
+}
 
 
 h3{
@@ -407,105 +434,3 @@ h2{
    
 }
 
-
-.container {
-    width: 100%;
-    height: 50vh;
-    padding: 30px;
-    display: flex;
-    justify-content: left;
-    align-items: center;
-  }
-  
-  .calendar {
-    width: 27rem;
-    height: 18rem;
-    border-radius: 20px;
-    background-color: var(--sidebar-color);
-    
-  }
-  
-  .month {
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
-    width: 100%;
-    height: 4rem;
-    background-color: var(--primary-color);
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0 2rem;
-    text-align: center;
-    text-shadow: 0 0.1rem 0.1rem rgba(0, 0, 0, 0.5);
-  }
-  
-  .month i {
-    font-size: 1.5rem;
-    cursor: pointer;
-    color: #fff;
-  }
-  
-  .month h1 {
-    font-size: 2rem;
-    font-weight: 400;
-    text-transform: uppercase;
-    letter-spacing: 0.2rem;
-    margin-bottom: 1rem;
-  }
-  
-  .month p {
-    font-size: 1.6rem;
-  }
-  
-  .weekdays {
-    width: 100%;
-    height: 5rem;
-    padding: 0 0.4rem;
-    display: flex;
-    align-items: center;
-  }
-  
-  .weekdays div {
-    font-size: 14px;
-    font-weight: 400;
-    letter-spacing: 0.1rem;
-    width: calc(44.2rem / 7);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    
-  }
-  
-  .days {
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    padding: 0.2rem;
-  }
-  
-  .days div {
-    font-size: 1rem;
-    margin: 0.3rem;
-    width: calc(40.2rem / 7);
-    height: 5rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-shadow: 0 0.3rem 0.5rem rgba(0, 0, 0, 0.5);
-    transition: background-color 0.2s;
-  }
-  
-  .days div:hover:not(.today) {
-    background-color: #262626;
-    border: 0.2rem solid #777;
-    cursor: pointer;
-  }
-  
-  .prev-date,
-  .next-date {
-    opacity: 0.5;
-  }
-  
-  .today {
-    background-color: var(--primary-color);
-  }
