--- a/Pages/css/formulir.css
+++ b/Pages/css/formulir.css
@@ -5,6 +5,8 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
+    justify-content: center;
+    transition: all 0.5ms ease;
 }
 
 :root{
@@ -28,8 +30,7 @@ body{
     background-color: var(--body-color);
     transition: var(--tran-05);
     display: flex;
-    align-items: center;
-    justify-content: center;
+
 }
 
 ::selection{
@@ -46,282 +47,27 @@ body.dark{
     --text-color: #ccc;
 }
 
-/* ===== Sidebar ===== */
- .sidebar{
-    position: fixed;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 350px;
-    padding: 10px 14px;
-    background: var(--sidebar-color);
-    transition: var(--tran-05);
-    z-index: 100;  
-}
-.sidebar.close{
-    width: 88px;
-}
-
-/* ===== Reusable code - Here ===== */
-.sidebar li{
-    height: 50px;
-    list-style: none;
-    display: flex;
-    align-items: center;
-    margin-top: 10px;
-}
-
-.sidebar header .image,
-.sidebar .icon{
-    min-width: 50px;
-    border-radius: 6px;
-}
-
-.sidebar .icon{
-    min-width: 60px;
-    border-radius: 6px;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 20px;
-}
-
-.sidebar .text,
-.sidebar .icon{
-    color: var(--text-color);
-    transition: var(--tran-03);
-}
-
-.sidebar .text{
-    font-size: 14px;
-    font-weight: 400;
-    white-space: nowrap;
-    opacity: 1;
-}
-.sidebar.close .text{
-    opacity: 0;
-}
-
-
-.sidebar header{
-    position: relative;
-}
-
-.sidebar header .image-text{
-    display: flex;
-    align-items: center;
-}
-.sidebar header .logo-text{
-    display: flex;
-    flex-direction: column;
-}
-header .image-text .name {
-    margin-top: 2px;
-    margin-left: 20px;
-    font-size: 16px;
-    font-weight: 400;
-}
-
-header .image-text .profession{
-    font-size: 18px;
-    margin-left: 20px;
-    font-weight: 600;
-    margin-top: -2px;
-    display: block;
-}
-
-.sidebar header .image{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.sidebar header .image img{
-    width: 40px;
-    border-radius: 6px;
-}
-
-.sidebar header .toggle{
-    position: absolute;
-    top: 50%;
-    right: -25px;
-    transform: translateY(-50%) rotate(180deg);
-    height: 25px;
-    width: 25px;
-    background-color: var(--primary-color);
-    color: var(--sidebar-color);
-    border-radius: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 22px;
-    cursor: pointer;
-    transition: var(--tran-05);
-}
-
-body.dark .sidebar header .toggle{
-    color: var(--text-color);
-}
-
-.sidebar.close .toggle{
-    transform: translateY(-50%) rotate(0deg);
-}
-
-.sidebar .menu{
-    margin-top: 40px;
-}
-
-.sidebar li.search-box{
-    border-radius: 10px;
-    background-color: var(--primary-color-light);
-    cursor: pointer;
-    transition: var(--tran-05);
-}
-
-.sidebar li.search-box input{
-    height: 100%;
-    width: 100%;
-    outline: none;
-    border: none;
-    background-color: var(--primary-color-light);
-    color: var(--text-color);
-    border-radius: 6px;
-    font-size: 14px;
-    font-weight: 400;
-    transition: var(--tran-05);
-}
-.sidebar li a{
-    list-style: none;
-    height: 100%;
-    background-color: transparent;
-    
-    display: flex;
-    align-items: center;
-    height: 100%;
-    width: 100%;
-    border-radius: 6px;
-    text-decoration: none;
-    transition: var(--tran-03);
-}
-
-.sidebar li a:hover{
-    background-color: var(--primary-color);
-    color: var();
-}
-.sidebar li a:hover .icon,
-.sidebar li a:hover .text{
-    color: var(--body-color);
-    
-}
-body.dark .sidebar li a:hover .icon,
-body.dark .sidebar li a:hover .text{
-    color: var(--body-color);
-}
-
-.sidebar .menu-bar{
-    height: calc(100% - 55px);
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    overflow-y: scroll;
-}
-.menu-bar::-webkit-scrollbar{
-    display: none;
-}
-.sidebar .menu-bar .mode{
-    border-radius: 6px;
-    background-color: var(--primary-color-light);
-    position: relative;
-    transition: var(--tran-05);
-}
-
-.menu-bar .mode .sun-moon{
-    height: 50px;
-    width: 60px;
-}
-
-.mode .sun-moon i{
-    position: absolute;
-}
-.mode .sun-moon i.sun{
-    opacity: 0;
-}
-body.dark .mode .sun-moon i.sun{
-    opacity: 1;
-}
-body.dark .mode .sun-moon i.moon{
-    opacity: 0;
-}
-
-.menu-bar .bottom-content .toggle-switch{
-    position: absolute;
-    right: 0;
-    height: 100%;
-    min-width: 60px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 6px;
-
-    cursor: pointer;
-}
-.toggle-switch .switch{
-    position: relative;
-    height: 22px;
-    width: 40px;
-    border-radius: 25px;
-    background-color: var(--toggle-color);
-    transition: var(--tran-05);
-}
-
-.switch::before{
-    content: '';
-    position: absolute;
-    height: 15px;
-    width: 15px;
-    border-radius: 50%;
-    top: 50%;
-    left: 5px;
-    transform: translateY(-50%);
-    background-color: var(--sidebar-color);
-    transition: var(--tran-04);
-}
-
-body.dark .switch::before{
-    left: 20px;
-}
 
 .home{
-    position: absolute;
+    position: fixed;
     top: 0;
     top: 0;
-    left: 350px;
+    align-items: center;
+    justify-content: center;
     height: 100vh;
-    width: calc(100% - 350px);
+    width: 100%;
     background-color: var(--body-color);
     transition: var(--tran-05);
 }
 .home .text{
     margin-top: 50px;
-    font-size: 18px;
-    font-weight: 600;
+    font-size: 20px;
+    font-weight: 800;
     color: var(--text-color);
     padding: 10px 30px;
+    text-align: center;
 }
 
-
-
-
-
-.sidebar.close ~ .home{
-    left: 78px;
-    height: 100vh;
-    width: calc(100% - 78px);
-}
-body.dark .home .text{
-    color: var(--text-color);
-}
 
 .container{
     height: 500px;
@@ -329,9 +75,10 @@ body.dark .home .text{
     width: 100%;
     border-radius: 20px;
     padding: 30px;
-    margin: 25px 25px;
+    margin: 25px auto;
     background-color: #fff;
     box-shadow: 0 5px 10px rgba(0,0,0,0.1);
+    text-align: center;
 
 }
 .container header{
@@ -426,6 +173,8 @@ form .fields .input-field{
 .input-field input[type="date"]:valid{
     color: #333;
 }
+
+
 .container form button, .backBtn{
     display: flex;
     align-items: center;
@@ -441,34 +190,36 @@ form .fields .input-field{
     background-color: var(--primary-color);
     transition: all 0.3s linear;
     cursor: pointer;
+    gap: 0.5em;
 }
 .container form .btnText{
     font-size: 14px;
     font-weight: 400;
 }
-.backBtn:hover{
-    color: var(--primary-color);
-    background-color: #D2D2FF;
-}
+
 form button:hover{
     color: var(--primary-color);
     background-color: #D2D2FF;
 }
+
 form button i,
 form .backBtn i{
-    margin: 0 6px;
+    margin: 0 0px;
 }
 form .backBtn i{
-    transform: rotate(180deg);
+   
+    font-size: 16px;
 }
 form .buttons{
     display: flex;
     align-items: center;
     justify-content: center;
 }
-form .buttons button , .backBtn{
-    margin-right: 14px;
+
+.backBtn{
+    margin: 20px 10px;
 }
+
 
 @media (max-width: 750px) {
     .container form{
